--- a/debian/control.in
+++ b/debian/control.in
@@ -9,7 +9,10 @@ Homepage: https://github.com/citusdata/shard_rebalancer
 
 Package: postgresql-PGVERSION-citus-rebalancer
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, postgresql-PGVERSION, postgresql-PGVERSION-citus-enterprise (>= 6.0.0)
+Depends: ${shlibs:Depends}, ${misc:Depends}, postgresql-PGVERSION, postgresql-PGVERSION-citus-enterprise-6.0 (>= 6.0.0)
+Provides: postgresql-PGVERSION-citus-rebalancer
+Conflicts: postgresql-PGVERSION-citus-rebalancer
+Replaces: postgresql-PGVERSION-citus-rebalancer (<< 6.0.0.citus-2~)
 Description: Dynamic shard balancer for Citus
  This extension implements a set of functions for rebalancing and replicating
  shards in Citus clusters.
