--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,7 @@ override_dh_auto_build:
 	+pg_buildext build $(shell pwd)/src/monitor build-%v
 
 override_dh_auto_clean:
-	+make -C $(shell pwd)/src/bin/citusha clean
+	+make -C $(shell pwd)/src/bin/pg_autoctl clean
 	+pg_buildext clean $(shell pwd)/src/monitor build-%v
 
 override_dh_auto_test:
@@ -22,7 +22,7 @@ override_dh_auto_install:
 	+make -C $(shell pwd)/src/bin/pg_autoctl install \
 		DESTDIR=$(CURDIR)/debian/${HANAME} \
 		BINDIR=/usr/bin
-	+pg_buildext install $(shell pwd)/src/monitor build-%v postgresql-%v-citus-ha
+	+pg_buildext install $(shell pwd)/src/monitor build-%v postgresql-%v-pgautofailover
 
 %:
 	dh $@
