--- a/debian/control.in
+++ b/debian/control.in
@@ -1,4 +1,4 @@
-Source: pgautofailover
+Source: pg-auto-failover
 Section: database
 Priority: optional
 Maintainer: Citus Data <packaging@citusdata.com>
@@ -7,21 +7,21 @@ Build-Depends: debhelper (>= 9), autotools-dev, flex, postgresql-server-dev-all 
 Standards-Version: 3.9.7
 Homepage: https://github.com/citusdata/pg_auto_failover
 
-Package: pgautofailover-cli
+Package: pg-auto-failover-cli
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Provides: pgautofailover-cli
-Conflicts: pgautofailover-cli
-Recommends: postgresql-10-pgautofailover | postgresql-11-pgautofailover
+Provides: pg-auto-failover-cli
+Conflicts: pg-auto-failover-cli
+Recommends: postgresql-10-auto-failover | postgresql-11-auto-failover
 Description: pg_auto_failover CLI
  This CLI is used to manage pg_auto_failover installations to provide High
  Availability to Postgres.
 
-Package: postgresql-PGVERSION-pgautofailover
+Package: postgresql-PGVERSION-auto-failover
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, postgresql-PGVERSION, pgautofailover-cli
-Provides: postgresql-PGVERSION-pgautofailover
-Conflicts: postgresql-PGVERSION-pgautofailover
+Depends: ${shlibs:Depends}, ${misc:Depends}, postgresql-PGVERSION, pg-auto-failover-cli
+Provides: postgresql-PGVERSION-auto-failover
+Conflicts: postgresql-PGVERSION-auto-failover
 Description: Postgres high availability support
  This extension implements a set of functions to provide High Availability to
  Postgres.
