--- a/debian/control.in
+++ b/debian/control.in
@@ -9,17 +9,17 @@ Homepage: https://github.com/citusdata/pg_auto_failover
 
 Package: pg-auto-failover-cli
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}
 Provides: pg-auto-failover-cli
 Conflicts: pg-auto-failover-cli
 Recommends: postgresql-10-auto-failover | postgresql-11-auto-failover
-Description: pg_auto_failover CLI
+Description: Command line interface and service to manage pg auto failover Clusters
  This CLI is used to manage pg_auto_failover installations to provide High
  Availability to Postgres.
 
 Package: postgresql-PGVERSION-auto-failover
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, postgresql-PGVERSION, pg-auto-failover-cli
+Depends: ${misc:Depends}, postgresql-PGVERSION, pg-auto-failover-cli
 Provides: postgresql-PGVERSION-auto-failover
 Conflicts: postgresql-PGVERSION-auto-failover
 Description: Postgres high availability support
