--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-HANAME := $(lastword $(shell grep "Package: pgautofailover-cli" debian/control))
+HANAME := $(lastword $(shell grep "Package: pg-auto-failover-cli" debian/control))
 
 include /usr/share/postgresql-common/pgxs_debian_control.mk
 clean: debian/control
@@ -22,7 +22,7 @@ override_dh_auto_install:
 	+make -C $(shell pwd)/src/bin/pg_autoctl install \
 		DESTDIR=$(CURDIR)/debian/${HANAME} \
 		BINDIR=/usr/bin
-	+pg_buildext install $(shell pwd)/src/monitor build-%v postgresql-%v-pgautofailover
+	+pg_buildext install $(shell pwd)/src/monitor build-%v postgresql-%v-auto-failover
 
 %:
 	dh $@
