--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ deploy:
     skip_cleanup: true
     local-dir: "pkgs/releases"
     on:
-      branch: "debian-ha"
+      branch: "debian-pgautofailover-enterprise"
       condition: -d "pkgs/releases"
