change the provided package to the dependency of our postgres extensions

--- a/debian/control.in
+++ b/debian/control.in
@@ -10,7 +10,7 @@ Homepage: https://github.com/citusdata/citus-ha
 Package: pg-auto-failover-cli-enterprise
 Architecture: any
 Depends: ${shlibs:Depends},${misc:Depends}
-Provides: pg-auto-failover-cli
+Provides: pg-auto-failover-cli-enterprise
 Conflicts: pg-auto-failover-cli
 Recommends: postgresql-10-auto-failover-enterprise | postgresql-11-auto-failover-enterprise
 Suggests: postgresql-11-citus-8.1 | postgresql-10-citus-8.1 | postgresql-10-citus-enterprise-8.1 | postgresql-11-citus-enterprise-8.1
