--- a/dockerfiles/centos-8-pg11/Dockerfile
+++ b/dockerfiles/centos-8-pg11/Dockerfile
@@ -29,11 +29,6 @@ RUN yum install -y epel-release \
     && yum install -y postgresql11-server postgresql11-devel \
     && yum clean all
 
-# install documentation generation libraries
-RUN yum install -y python2 python2-pip  \
-    && pip2 install --upgrade pip \
-    && pip2 install -U Sphinx
-
 # install jq to process JSON API responses
 RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 \
          -o /usr/bin/jq \
@@ -49,6 +44,18 @@ RUN { \
         || yum install -y devtoolset-8-gcc ; \
     } \
     && yum clean all
+
+# install sphinx on distros with python3
+RUN { \
+        { yum search python3-pip 2>&1 | grep 'No matches found' ; } \
+        || { \
+            yum install -y python3-pip && \
+            pip3 install sphinx==1.8 \
+            ; \
+        } \
+    } \
+    && yum clean all
+
 
 RUN touch /rpmlintrc \
     && echo '%_build_pkgcheck %{_bindir}/rpmlint -f /rpmlintrc' >> /etc/rpm/macros
