Make the docker image templates work again

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ env:
     - TARGET_PLATFORM=debian,buster
     - TARGET_PLATFORM=debian,jessie
     - TARGET_PLATFORM=debian,stretch
+    - TARGET_PLATFORM=oraclelinux,8
     - TARGET_PLATFORM=oraclelinux,7
     - TARGET_PLATFORM=oraclelinux,6
+    - TARGET_PLATFORM=ubuntu,focal
     - TARGET_PLATFORM=ubuntu,bionic
     - TARGET_PLATFORM=ubuntu,xenial
     - TARGET_PLATFORM=pgxn
