--- a/dockerfiles/ubuntu-focal-all/Dockerfile
+++ b/dockerfiles/ubuntu-focal-all/Dockerfile
@@ -29,6 +29,8 @@ RUN set -ex; \
 # uid                  PostgreSQL Debian Repository
     key='B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8'; \
     export GNUPGHOME="$(mktemp -d)"; \
+# Fix ipv6 issue on travis: https://github.com/f-secure-foundry/usbarmory-debian-base_image/issues/9#issuecomment-466594168
+    echo "disable-ipv6" >> $GNUPGHOME/dirmngr.conf; \
     gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; \
     gpg --batch --export "$key" > /etc/apt/trusted.gpg.d/postgres.gpg; \
     command -v gpgconf > /dev/null && gpgconf --kill all; \
