Use security flags supplied by the configure scripts

--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,7 @@ override_dh_auto_test:
 	# nothing to do here, see debian/tests/* instead
 
 override_dh_auto_configure:
-	+pg_buildext configure build-%v --with-extra-version="$${CONF_EXTRA_VERSION:-}"
+	+pg_buildext configure build-%v --with-extra-version="$${CONF_EXTRA_VERSION:-}" --with-security-flags
 
 override_dh_auto_install:
 	+pg_buildext install build-%v postgresql-%v-citus
