All pgautofailover enterprise nightly (#608)
* add event type check on travis to seperate triggering cron and manually triggered events

* add unsigned package support for nightlies

* Update if clauses with detailed cases

Co-authored-by: Onur Tirtir <onurcantirtir@gmail.com>

* unify echo lines in if else clauses

* change the order of if clauses to make the code more readable

Co-authored-by: Onur Tirtir <onurcantirtir@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,11 +53,20 @@ before_install:
     fi
 install: true
 script: |
-        if [ -z "${UNENCRYPTED_PACKAGE:-}" ]; then
-        citus_package -p ${TARGET_PLATFORM} 'local' 'release'
-        else
-        build_new_release && build_new_nightly
+        if [ ${TRAVIS_EVENT_TYPE} == 'push' ] || [ ${TRAVIS_EVENT_TYPE} == 'pull_request' ] || [ ${TRAVIS_EVENT_TYPE} == 'api' ] ; then
+          if [ -z "${UNENCRYPTED_PACKAGE:-}" ]; then
+            citus_package -p ${TARGET_PLATFORM} 'local' 'release'
+          else
+             build_new_release
+           fi
+        elif [ ${TRAVIS_EVENT_TYPE} == 'cron' ] ; then
+          if [ -z "${UNENCRYPTED_PACKAGE:-}" ]; then
+            citus_package -p ${TARGET_PLATFORM} 'local' 'nightly'
+         else
+           build_new_nightly
+         fi
         fi
+
 deploy:
   - provider: packagecloud
     username: "citusdata"
