Give execute permission for update_package_properties.sh file

--- a/.github/workflows/update_package_properties.yml
+++ b/.github/workflows/update_package_properties.yml
@@ -27,4 +27,4 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Execute Package Properties Update
-        run: ./tools/bash/update_package_properties.sh
+        run: chmod +x ./tools/bash/update_package_properties.sh && ./tools/bash/update_package_properties.sh
